[package]
name = "benchmarks"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_persistence_api = { path = "../crates/holochain_persistence_api" }
holochain_persistence_file = { path = "../crates/holochain_persistence_file" }
holochain_persistence_mem = { path = "../crates/holochain_persistence_mem" }
holochain_persistence_pickle = { path = "../crates/holochain_persistence_pickle" }
holochain_persistence_lmdb = { path = "../crates/holochain_persistence_lmdb" }
bencher = "=0.1.5"
tempfile = "=3.0.7"



[[bench]]
name = "my_benchmark"
harness = false
