[package]
name = "holochain_persistence_file"
version = "0.0.3-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "persistence for content addressable storage and entity attribute value indexes. A file system based implementation using directory hieraarchies to navigate data."
keywords = ["holochain", "holo", "persistence", "cas", "eav"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_persistence_file"
repository = "https://github.com/holochain/holochain-persistence"


[dependencies]
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_test = "=1.0.89"
multihash = "=0.8.0"
holochain_persistence_api = { path = "../holochain_persistence_api", version= "=0.0.3-alpha1" }
holochain_json_api = "=0.0.1-alpha2"
lazy_static = "=1.2.0"
glob = "=0.3.0"
uuid = { version = "=0.7.1", features = ["v4"] }


[dev-dependencies]
tempfile = "=3.0.7"
