[package]
name = "holochain_persistence_lmdb"
version = "0.0.8"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "persistence for content addressable storage and entity attribute value indexes backed by pickledb-rs."
keywords = ["holochain", "persistence", "lmdb", "cas", "eav"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_persistence_lmdb"
repository = "https://github.com/holochain/holochain-persistence"


[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
serde_test = "=1.0.89"
multihash = "=0.8.0"
# keep version on the left hand side for release regex
holochain_persistence_api = { version = "=0.0.8", path = "../holochain_persistence_api" }
holochain_json_api = "=0.0.17"
lazy_static = "=1.2.0"
glob = "=0.3.0"
uuid = { version = "=0.7.1", features = ["v4"] }
lmdb-zero = "0.4.4"
pickledb = "=0.4.0"
bencher = "=0.1.5"
rand = "0.7.2"
kv = "0.9.2"

[dev-dependencies]
tempfile = "=3.0.7"
