[package]
name = "holochain_persistence_pickle"
version = "0.0.12"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "persistence for content addressable storage and entity attribute value indexes backed by pickledb-rs."
keywords = ["holochain", "persistence", "pickledb-rs", "cas", "eav"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_persistence_pickle"
repository = "https://github.com/holochain/holochain-persistence"


[dependencies]
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_test = "=1.0.89"
multihash = "=0.8.0"
# keep version on the left hand side for release regex
holochain_persistence_api = { version = "=0.0.12", path = "../holochain_persistence_api" }
holochain_json_api = "=0.0.17"
lazy_static = "=1.4.0"
glob = "=0.3.0"
uuid = { version = "=0.7.1", features = ["v4"] }
pickledb = "=0.4.0"

[dev-dependencies]
tempfile = "=3.0.7"
